--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -252,6 +252,11 @@ a {
  * =====================================================================
  */
 
+// Style the <h2> headers on each service...MEN, WOMEN, etc...
+.service-page-section-headers {
+  font-size: 18px; 
+}
+
  // List of services
 .service-list {
   padding-left:20px;
@@ -263,6 +268,24 @@ a {
 	margin-bottom:20px;
 }
 
+
+.service-section {
+	clear: both;
+}
+
+// Service names/prices are in span tags that default to display: inline
+// Reset that to display: inline-block
+.single-service-copy {
+  display: inline-block;
+}
+
+.service-type{
+  float: left;
+}
+
+.service-price{
+  float: right;
+}
 
 /*
  * =====================================================================
