--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -59,10 +59,14 @@
 
 @media (min-width: 768px) {
 
-  // Globally set the with for all page headers
+  // Globally set the with for all page headers...
   .entry-title {
     max-width: 330px; 
     border-bottom: 1px solid rgba(76, 75, 75, 1);
   }
 
+  // ...except for the haircutting & styling page because it's too big
+  .page-id-44  .entry-title {
+    max-width: 460px; 
+  }
 }
