--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -268,23 +268,27 @@ a {
 	margin-bottom:20px;
 }
 
-
+// Style each block of service prices
 .service-section {
-	clear: both;
+	  display: inline-block;
+	  max-width: 440px;
+	  max-width: 300px;
 }
 
 // Service names/prices are in span tags that default to display: inline
 // Reset that to display: inline-block
 .single-service-copy {
   display: inline-block;
+  width: 100px;
 }
 
 .service-type{
-  float: left;
 }
 
 .service-price{
-  float: right;
+  position: relative;
+  width: auto;
+  left: 280px;
 }
 
 /*
