update service-related styles

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -203,11 +203,12 @@ ul.nav-menu .focus > ul,
 
 
 /*
- * =====================================================================
+ * ====================================================================
  * Start content navigation styling
- * =====================================================================
+ * ====================================================================
  */
 
+// Style pseudo classes for all links in the content
 a {
   color: rgba(37, 184, 192, 1);
   text-decoration: underline;
@@ -245,11 +246,10 @@ a {
 }
 
 
-
 /*
- * =====================================================================
+ * ====================================================================
  * Services Page stuff
- * =====================================================================
+ * ====================================================================
  */
 
 // Style the <h2> headers on each service...MEN, WOMEN, etc...
@@ -282,30 +282,32 @@ a {
   width: 100px;
 }
 
-.service-type{
-}
-
-.service-price{
+// Style the service price text
+.service-price {
   position: relative;
   width: auto;
   left: 280px;
 }
 
+// Place "$" before each price
+.service-price::before { 
+  content: "$";
+}
+
 /*
- * =====================================================================
+ * ====================================================================
  * Product Page stuff
- * =====================================================================
+ * ====================================================================
  */
 .product-links-header {
 	margin-top:50px;
 }
 
 
-
 /*
- * =====================================================================
+ * ====================================================================
  * Contact Page stuff
- * =====================================================================
+ * ====================================================================
  */
 .contact-page-test {
 	margin-bottom:50px;
