--- a/css-build/style.css
+++ b/css-build/style.css
@@ -362,9 +362,9 @@ ul.nav-menu .focus > ul,
   clip: rect(1px, 1px, 1px, 1px);
 }
 /*
- * =====================================================================
+ * ====================================================================
  * Start content navigation styling
- * =====================================================================
+ * ====================================================================
  */
 a {
   color: #25b8c0;
@@ -391,9 +391,9 @@ a:visited {
   text-decoration: none;
 }
 /*
- * =====================================================================
+ * ====================================================================
  * Services Page stuff
- * =====================================================================
+ * ====================================================================
  */
 .service-page-section-headers {
   font-size: 18px;
@@ -419,18 +419,21 @@ a:visited {
   width: auto;
   left: 280px;
 }
+.service-price::before {
+  content: "$";
+}
 /*
- * =====================================================================
+ * ====================================================================
  * Product Page stuff
- * =====================================================================
+ * ====================================================================
  */
 .product-links-header {
   margin-top: 50px;
 }
 /*
- * =====================================================================
+ * ====================================================================
  * Contact Page stuff
- * =====================================================================
+ * ====================================================================
  */
 .contact-page-test {
   margin-bottom: 50px;
