update styles related to the services page, mostly the columns

--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -22,7 +22,7 @@ a:focus,a:hover{
   margin: 0 auto;
 }
 
-// Override left & right that's always on  Bootstrap's ".col-md-6" & ".container"
+// Override side padding on Bootstrap's .col-md-6 .container
 .col-md-3, .col-md-6, .col-md-9 .container, {
   padding-right: 0;
   padding-left: 0;
