--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -5,9 +5,9 @@
 		margin: 0 auto;
 	}
 
-  // Hide the hamburger menus on 768px views and higher
+	// Hide the hamburger menus on 768px views and higher
 	.menu-toggle {
-	  display: none;
+		display: none;
 	}
 
 	// Style the contact info bar at the top of every page
@@ -18,7 +18,7 @@
 		padding:2px 0;
 	}
 
-  // Contact header, main content element & footer share the same width
+	// Contact header, main content element & footer share the same width
 	.contact-information-inner, .site-content, .site-footer-inner {
 		max-width: 900px;
 		margin: 0 auto;
@@ -40,11 +40,11 @@
 		float: right;
 	}
 
-  // Style the containing ".navbar" element on 768px views and higher
+	// Style the containing ".navbar" element on 768px views and higher
 	.navbar {
-	  max-width: 600px;
-	  display: inline-block;
-	  left: 28px;
+		max-width: 600px;
+		display: inline-block;
+		left: 28px;
 	}
 
 	// Padding the top copy on the home page
@@ -52,10 +52,14 @@
 		padding-top: 30px;
 	}
 
-  // Make sure home page text blocks aren't centered
-  .row-inner-element {
-  	margin: 0;
-  }
+	// Make sure home page text blocks aren't centered
+	.row-inner-element {
+		margin: 0;
+	}
 
+	.images-column {
+		margin-left: 70px;
+		width:310px;
+	}
 
 }
