--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -14,7 +14,7 @@ body {
 	font-family: 'Quicksand', sans-serif;
 }
 
-// Globally hide the home poge's content title
+// Globally hide the home page's content title
 .home .entry-title {
 	.ti();
 }
