update styles related to the FR slideshow

--- a/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
+++ b/css-build/imports/PLUGIN_wp_fluid_responsive_images.less
@@ -1,7 +1,7 @@
 /*
- * =====================================================================
+ * ====================================================================
  * Global Fluid Responive Slideshow styles
- * =====================================================================
+ * ====================================================================
  */
 
 
@@ -10,7 +10,7 @@
 // Sucks that "!important" is needed to do this, but there is no choice
 
 .frs-slideshow-container {
-  margin: 0 auto !important;
+  margin: 70px auto 0 !important;
   max-width: 277px !important;
 }
 
