--- a/css-build/style.css
+++ b/css-build/style.css
@@ -663,12 +663,12 @@ a:visited {
   }
 }
 /*
- * =====================================================================
+ * ====================================================================
  * Global Fluid Responive Slideshow styles
- * =====================================================================
+ * ====================================================================
  */
 .frs-slideshow-container {
-  margin: 0 auto !important;
+  margin: 70px auto 0 !important;
   max-width: 277px !important;
 }
 .frs-photo-column {
