--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1527,7 +1527,7 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .team-image-container{margin:0 auto;width:200px}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}}
-.frs-slideshow-container{margin:0 auto!important;max-width:277px!important}
+.frs-slideshow-container{margin:70px auto 0!important;max-width:277px!important}
 .frs-photo-column{margin-left:0}
 .wpcf7-submit{border-radius:10px;color:#fff;background:#545454;font-weight:700;padding:8px;border:none}
 @media (max-width:767px){.frs-photo-column{margin:0 auto}
